fix multiple files button overflow

--- a/frontend/src/components/forms/Form.css
+++ b/frontend/src/components/forms/Form.css
@@ -51,6 +51,7 @@
   background-color: #333333;
   color: white;
   height: 30px;
+  width: 106px;
 }
 
 .form-wrapper {
